Switch to Buildkite beta agent
* Add wait-for-it.sh and use it directly
* Use dynamic pipeline generation
* Actually build escript using MIX_ENV=prod
* Triggered pipeline uses a pre-built image
  This comes from the Cog pipeline that triggered it; we're no longer
  building it fresh here.

Fixes operable/cog#1280

--- a/docker-compose.ci.yml
+++ b/docker-compose.ci.yml
@@ -7,6 +7,8 @@ services:
       - POSTGRES_USER=cog
       - POSTGRES_PASSWORD=cog
   cog:
+    # TODO: Once we're pushing "edge" (or whatever) images from the
+    # Cog pipeline, we should use them here.
     image: operable/cog-preview:latest
     command: /home/operable/cog/scripts/docker-start
     depends_on:
