--- a/Dockerfile.ubuntu
+++ b/Dockerfile.ubuntu
@@ -1,7 +1,7 @@
 FROM ubuntu:16.10
 
 RUN apt-get update && \
-    apt-get -y install python3-pip && \
+    apt-get -y install python3-pip git && \
     pip3 install --upgrade pip
 
 WORKDIR /src/
@@ -15,3 +15,5 @@ RUN pip3 install -r requirements.build.txt
 ENV LC_ALL=C.UTF-8 LANG=C.UTF-8
 
 COPY . /src/
+RUN cd /src && make build && \
+    cp dist/cogctl /usr/bin
