--- a/Dockerfile.alpine
+++ b/Dockerfile.alpine
@@ -38,5 +38,4 @@ COPY requirements.txt /src/
 RUN pip3 install -r requirements.txt
 
 COPY . /src/
-RUN cd /src && make build && \
-    cp dist/cogctl /usr/bin
+RUN make build && cp dist/cogctl /usr/bin
