--- a/Dockerfile.ubuntu
+++ b/Dockerfile.ubuntu
@@ -15,5 +15,4 @@ RUN pip3 install -r requirements.build.txt
 ENV LC_ALL=C.UTF-8 LANG=C.UTF-8
 
 COPY . /src/
-RUN cd /src && make build && \
-    cp dist/cogctl /usr/bin
+RUN make build && cp dist/cogctl /usr/bin
